--- a/ShippingStationClient.html
+++ b/ShippingStationClient.html
@@ -15,7 +15,7 @@
 
 <section>
      <h1 class="table-title">Team 2 - Shipping Station</h1>
-<div class="col-xs-6">
+<div class="col-xs-12">
   <h3 class="table-title">Bot-1</h3>
    <div>
     <table>
@@ -46,10 +46,10 @@
           </td>
 
           <td>
-              <span class="groupValue">{{order.qtyOrdered}}</span>
+              <span class="groupValue">{{order.qtyOnTrip}}</span>
           </td>
           <td>
-            <button class="large green button groupHeader" ng-show="order.group_by_key" ng-click="fulfillOrder(order.orderID)">Fulfill</button>
+            <button class="large green button groupHeader" ng-show="order.group_by_key">Fulfill</button>
         </tr>
       </tbody>
     </table>
@@ -57,55 +57,13 @@
 </div>
 
 <!-- Second table listing all cancelled orders -->
-<div class="col-xs-6">
-  <h3 class="table-title">Bot-2</h3>
-  <div>
-   <table>
-     <thead>
-       <tr>
-         <th style="font-weight:100">OrderID</th>
-         <th style="font-weight:100">ProductID</th>
-         <th style="font-weight:100">Quantity</th>
-         <th style="font-weight:100">Status</th>
-       </tr>
-   </thead>
- </table>
- </div>
- <div class="tbl-content">
- <table class="table-fill">
-     <tbody class="table-hover">
-       <tr ng-repeat="order in cancelled.Orders | groupBy:'orderID'">
-         <td>
-           <span class="groupHeader" ng-show="order.group_by_key">{{order.orderID}}</span>
-         </td>
-         <td>
-           <span class="groupValue" ng-if="order.productID == 1" >Red</span>
-             <span class="groupValue" ng-if="order.productID == 2" >Green</span>
-             <span class="groupValue" ng-if="order.productID == 3" >Blue</span>
-             <span class="groupValue" ng-if="order.productID == 4" >Black</span>
-             <span class="groupValue" ng-if="order.productID == 5" >Yellow</span>
-             <span class="groupValue" ng-if="order.productID == 6" >White</span>
-         </td>
 
-         <td>
-             <span class="groupValue">{{order.qtyOrdered}}</span>
-         </td>
-         <td>
-           <button class="large green button groupHeader" ng-show="order.group_by_key" ng-click="fulfillOrder(order.orderID)">Fulfill</button>
-       </tr>
-     </tbody>
-   </table>
- </div>
-
-</div>
-
-</>
 
 
 <div class="centered">
 
-<button style="margin-top:2%;" class="large green button" ng-click="botone(); botonedata()">Bot 1</button>
-<button class="large green button" ng-click="bottwo(); bottwodata();">Bot 2</button>
+<button style="margin-top:2%;" class="large green button" ng-click="botone(); botonedata(); botstart()">Bot 1</button>
+<button class="large green button" ng-click="bottwo(); bottwodata(); botstart()">Bot 2</button>
 <button class="large green button" ng-click="maintenenceOn(); startmaintenencedata()">Maintenence On</button>
 <button class="large green button" ng-click="maintenenceOff(); stopmaintenencedata()">Maintenence Off</button>
 </div>
