--- a/ShippingStationClient.html
+++ b/ShippingStationClient.html
@@ -49,7 +49,7 @@
               <span class="groupValue">{{order.qtyOnTrip}}</span>
           </td>
           <td>
-            <button class="large green button groupHeader" ng-show="order.group_by_key">Fulfill</button>
+            <button class="large green button groupHeader" ng-if = "filterfulfill(order.orderID,fulfill)" ng-show="order.group_by_key">Fulfill</button>
         </tr>
       </tbody>
     </table>
@@ -62,8 +62,8 @@
 
 <div class="centered">
 
-<button style="margin-top:2%;" class="large green button" ng-click="botone(); botonedata(); botstart()">Bot 1</button>
-<button class="large green button" ng-click="bottwo(); bottwodata(); botstart()">Bot 2</button>
+<button style="margin-top:2%;" class="large green button" ng-click="botstart(); botone(); botonedata();">Bot 1</button>
+<button class="large green button" ng-click="botstart(); bottwo(); bottwodata();">Bot 2</button>
 <button class="large green button" ng-click="maintenenceOn(); startmaintenencedata()">Maintenence On</button>
 <button class="large green button" ng-click="maintenenceOff(); stopmaintenencedata()">Maintenence Off</button>
 </div>
