--- a/ShippingStationClient.html
+++ b/ShippingStationClient.html
@@ -12,7 +12,6 @@
 
   <body ng-app="shippingstation" ng-controller="shippingcontroller">
 
-
 <section>
      <h1 class="table-title">Team 2 - Shipping Station</h1>
 <div class="col-xs-12">
@@ -48,8 +47,13 @@
           <td>
               <span class="groupValue">{{order.qtyOnTrip}}</span>
           </td>
+          
           <td>
-            <button class="large green button groupHeader" ng-if = "filterfulfill(order.orderID,fulfill)" ng-show="order.group_by_key">Fulfill</button>
+            
+            <div ng-show="fulfilldisp(order.orderID,fulfill.orders)">
+            <button class="large green button groupHeader" ng-show="order.group_by_key">Fulfill</button>
+          </div>
+          </td>
         </tr>
       </tbody>
     </table>
